# polyclaw

./: .gitignore  Dockerfile  README.md  pyproject.toml
.polyclaw-data/: deployments.json  mcp_servers.json  policy.yaml
app/cli/: run.py
app/frontend/src/: types.ts
app/frontend/src/pages/: SetupWizard.tsx
app/runtime/agent/: agent.py  chat.py  one_shot.py
app/runtime/config/: settings.py
app/runtime/messaging/: telegram_native.py
app/runtime/server/: lifecycle.py
app/runtime/server/setup/: _routes.py
app/runtime/services/cloud/: github.py
app/tui/src/deploy/: index.ts  local.ts  target.ts
app/tui/src/ui/: target-picker.ts
docs/: architecture.md  architecture.mmd
docs/architecture/: agent-design-guide.md  messaging-architecture.md  messaging-architecture.mmd
docs/content/getting-started/: agency-auth.md  prerequisites.md  telegram.md
presentations/: polyclaw.pptx
scripts/: polyclaw-run.sh  polyclaw.sh  test-cli.sh
